refactor: simplify dependency report classes and improve method signatures